examples/invalid/include.mcl

#include "includechild.mcl"

void main() {
    setX();
}